@@ -1,3 +1,0 @@
-MD5 9f1b9c36d37eb8371c83b5610362d16d ipset-2.1.0-20050119.tar.bz2 23821
-RMD160 315f62e029237beb328dab54e28a0178f6b91ea0 ipset-2.1.0-20050119.tar.bz2 23821
-SHA256 23cfac9c5f08453f3b3567adc4ed4c3d4055da6f25be56c251eb7785e81aa8a6 ipset-2.1.0-20050119.tar.bz2 23821
